# slm

./: .gitignore  README.md  config.yaml  download_data.py  generate.py  gui.py  model.py  preprocess.py  pyproject.toml  requirements.txt  setup_check.py  train.py
.github/: .copilot-instructions.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  ENHANCEMENTS.md  PROJECT_SUMMARY.md  README_OLD.md  REFACTORING_COMPLETE.md  RUFF_INTEGRATION.md  TRANSFORMER_GUIDE.md
slm/: __init__.py  cli.py  config.py  exceptions.py  gui.py  logging_config.py  utils.py
slm/core/: data.py  generator.py  models.py  trainer.py
tests/: test_models.py  test_slm.py
